# psse_model_util

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  LICENSE.md  PROJECT_PLAN.md  README.md  __about__.py  compare.py  delete_me.py  flowgate.py  inch.py  model.py  pyproject.toml  raw_to_rawx.py  requirements.txt  version.py
.github/workflows/: cd.yml  ci.yml  lint.yml  publish.yml
build_utils/: build.py  build_utils.py  git_utils.py  make_wheel.cmd
common/: __init__.py  constants.py  dataframe_util.py  dirs.py  file_lock_checker.py  file_util.py  json_util.py  logging_config.py  pyqt5.py
data/: sample_v35_rawx.txt
dataformat/: classes.py  inch_templates.py  rawx_json_template.py
docs/: .gitignore  Makefile  PUBLISHING.md  RAW_TO_RAWX.md  conf.py  index.rst  make.bat  requirements.txt
docs/api/: common.rst  compare.rst  dataformat.rst  flowgate.rst  inch.rst  index.rst  model.rst  raw_to_rawx.rst
docs/superpowers/plans/: 2026-05-29-flowgate-key-elements.md  2026-06-16-tie-lines-neighborhood.md  2026-06-18-prepare-for-pypi.md  2026-06-24-network-section-schema-registry.md
docs/superpowers/specs/: 2026-05-29-flowgate-key-elements-design.md  2026-06-16-tie-lines-neighborhood-design.md  2026-06-24-network-section-schema-registry-design.md
psse_model_util/: __init__.py  compare.py  constants.py  dataformat34.py  dataformat35.py  inch.py  model.py  one_line_diagram.py  parser_to_model_fail.py  raw_parser.py  raw_to_rawx.py  rawx_json_template.py  rawx_parser.py  version.py
psse_model_util/build_utils/: build.py  build_utils.py  git_utils.py
psse_model_util/common/: __init__.py  classes.py  constants.py  dataformat34.py  dataformat35.py  dataframe_util.py  dirs.py  file_lock_checker.py  file_util.py  json_util.py  logging_config.py  pyqt5.py  raw_rawx_section_map.csv  rawx_raw_map.csv
psse_model_util/dataformat/: classes.py  inch_templates.py  rawx_json_template.py  rawx_raw_map.csv
scripts/: external_tie_neighborhood.py
src/psse_model_util/: __about__.py  __init__.py  compare.py  flowgate.py  inch.py  model.py  raw_to_rawx.py  version.py
src/psse_model_util/common/: __init__.py  constants.py  dataframe_util.py  dirs.py  file_util.py  json_util.py  logging_config.py
src/psse_model_util/dataformat/: __init__.py  classes.py  inch_templates.py  rawx_json_template.py  rawx_raw_map.csv  section_schema.py
src/psse_model_util/flowgate/: __init__.py  _api.py  _collect.py  _graph.py  _parse.py  _resolve.py  _types.py
src/psse_model_util/util/: __init__.py  contingency_util.py
tests/: build_synthetic_mon.py  conftest.py  example_compare.py  example_model.py  test_classes.py  test_classes_coverage.py  test_common_dataframe_util.py  test_common_utils_coverage.py  test_compare.py  test_compare_coverage.py  test_compare_edges_coverage.py  test_dataframe_util.py  test_dataframe_util_coverage.py  test_derived_name.py  test_dirs.py  test_draw_one_line.py  test_file_util.py  test_file_util_coverage.py  test_flowgate_cli.py  test_flowgate_collect.py  test_flowgate_neighborhood.py  test_flowgate_parse.py  test_flowgate_resolve.py  test_model.py  test_model2.py  test_network_queries.py  test_parser.py  test_phase_1_4.py  test_phase_1_5.py  test_phase_2_2.py  test_pickle_cache_schema.py  test_placeholder.py  test_raw_to_rawx.py  test_raw_to_rawx_coverage.py  test_rawx.py  test_section_schema.py
tests/common/: test_classes.py  test_dataframe_util.py  test_dirs.py  test_file_util.py  test_json_util.py  test_pyqt5.py
tests/data/: Model_1 and 2 differences.txt  Model_1.raw  Model_2.raw  README.md  minimal.raw  results.txt  sample.raw  sample2_34.raw  sample2_v35.rawx  sample_v35.raw  sample_v35.rawx  synthetic_flowgates.mon  synthetic_pjm.mon  transformer.raw
tests/rawx/: test_model.py
util/: contingency_util.py
