[project]
name = "psse-model-util"
version = "0.0.1"
description = ""
authors = [
    { name = "Chris Advena" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "pandas",
    "appdirs",
    "networkx",
    "openpyxl",
    "arrow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "psse_model_util"
