[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psse-model-util"
dynamic = ["version"]
description = "Python library for reading, editing, validating, and comparing PSS/E power system models (RAW v33/34/35 and RAWX formats)."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "Proprietary" }
authors = [
    { name = "cadvena" }
]
keywords = ["psse", "power systems", "RAW", "RAWX", "PSS/E"]

dependencies = [
    # Core data
    "pandas>=2.0",
    "numpy>=1.24",
    "networkx>=3.0",
    "openpyxl>=3.1",

    # Datetime
    "python-dateutil>=2.8",
    "pytz>=2023.3",
    # arrow intentionally omitted -- to be replaced with stdlib datetime (see task 1.7)

    # Visualization (current -- to be replaced in Phase 3)
    "plotly>=5.0",
    "dash>=2.0",
    "dash-cytoscape>=0.3",

    # Build / version utilities
    "gitpython>=3.1",

    # Platform / system
    "platformdirs>=3.0",
    "portalocker>=2.0",
    "certifi>=2023.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.hatch.version]
path = "version.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]+)['\"]"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "build_utils/",
    "*.cmd",
    "delete_me.py",
]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
