[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psse-model-util"
dynamic = ["version"]
description = "Python library for reading, editing, validating, and comparing PSS/E power system models (RAW v33/34/35 and RAWX formats)."
readme = "README.md"
requires-python = ">=3.11,!=3.14.1,<3.15"
license = { text = "Proprietary" }
authors = [
    { name = "cadvena" }
]
keywords = ["psse", "power systems", "RAW", "RAWX", "PSS/E"]

dependencies = [
    # Core data
    "pandas>=2.0",
    "numpy>=1.24",
    "networkx>=3.0",
    "openpyxl>=3.1",

    # Datetime
    "python-dateutil>=2.8",
    "pytz>=2023.3",
    # arrow intentionally omitted -- to be replaced with stdlib datetime (see task 1.7)

    # Visualization (current -- to be replaced in Phase 3)
    "plotly>=5.0",
    "dash>=2.0",
    "dash-cytoscape>=0.3",

    # Platform / system
    "platformdirs>=3.0",
    "portalocker>=2.0",
    "arrow>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.hatch.version]
path = "__about__.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]+)['\"]"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "*.cmd",
    "dist/",
]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = ["legacy_tests"]
addopts = [
    "--tb=short",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "dist/*",
    "*/__pycache__/*",
    # Scaffolded / WIP — not yet testable
    "inch.py",
    "util/contingency_util.py",
    "version.py",
    # Deprecated visualization — to be replaced in Phase 3.1
    "one_line_diagram.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 40
